--- a/.gitignore
+++ b/.gitignore
@@ -63,3 +63,6 @@ x64/Debug/Gra-w-zycie.tlog/link.write.1.tlog
 x64/Debug/Gra-w-zycie.vcxproj.FileListAbsolute.txt
 x64/Debug/vc143.idb
 x64/Debug/vc143.pdb
+x64/Debug/Gra-w-zycie.tlog/
+.vs/Gra-w-zycie/v17/ipch/AutoPCH/55f59d9b76285040/
+
